<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_firstname_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/input_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_firstname"
        app:layout_constraintTop_toBottomOf="@+id/label_firstname" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="@+id/label_address"
        app:layout_constraintTop_toBottomOf="@+id/input_address" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_birthday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_email"
        app:layout_constraintTop_toBottomOf="@+id/label_email" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="image"
        android:src="@drawable/lays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/label_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_lastname_text"
        app:layout_constraintStart_toStartOf="@+id/label_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_firstname" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/label_lastname"
        app:layout_constraintTop_toBottomOf="@+id/label_lastname" />

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_phone_text"
        app:layout_constraintStart_toStartOf="@+id/label_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_phone"
        app:layout_constraintTop_toBottomOf="@+id/label_phone" />

    <TextView
        android:id="@+id/label_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_birthday"
        app:layout_constraintStart_toStartOf="@+id/label_phone"
        app:layout_constraintTop_toBottomOf="@+id/input_lastname" />

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_send_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_phone" />

    <Button
        android:id="@+id/button2"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_reset_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <EditText
        android:id="@+id/input_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_lastname"
        app:layout_constraintStart_toStartOf="@+id/label_phone"
        app:layout_constraintTop_toBottomOf="@+id/label_birthday" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_address"
        app:layout_constraintStart_toStartOf="@+id/input_birthday"
        app:layout_constraintTop_toBottomOf="@+id/input_birthday" />

    <EditText
        android:id="@+id/input_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_birthday"
        app:layout_constraintStart_toStartOf="@+id/label_address"
        app:layout_constraintTop_toBottomOf="@+id/label_address" />


</androidx.constraintlayout.widget.ConstraintLayout>